force-app/main/default/objects/FluxoTabulacao__c/FluxoTabulacao__c.object-meta.xml
<CustomObject>
    <label>Fluxo Tabulação</label>
    <nameField>
        <label>Próximo Passo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fluxos Tabulação</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>