force-app/main/default/objects/FluxoTabulacao__c/fields/NomeProximoPasso__c.field-meta.xml
<CustomField>
    <fullName>NomeProximoPasso__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome Próximo Passo</label>
    <type>Text</type>
</CustomField>