force-app/main/default/objects/FluxoTabulacao__c/fields/ProximaTabulacao__c.field-meta.xml
<CustomField>
    <fullName>ProximaTabulacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Próxima Tabulação</label>
    <referenceTo>Tabulacao__c</referenceTo>
    <relationshipLabel>Fluxos Tabulação (Próxima Tabulação)</relationshipLabel>
    <relationshipName>FluxosTabulacaoParticipante</relationshipName>
    <type>Lookup</type>
</CustomField>