force-app/main/default/objects/FluxoTabulacao__c/fields/TabulacaoPai__c.field-meta.xml
<CustomField>
    <fullName>TabulacaoPai__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tabulação Pai</label>
    <referenceTo>Tabulacao__c</referenceTo>
    <relationshipLabel>Fluxos Tabulação</relationshipLabel>
    <relationshipName>FluxosTabulacao</relationshipName>
    <type>Lookup</type>
</CustomField>